2011-04-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/*: Doesn't share private photo.
	* utils/urlgetautoproxy.py: Added urlget_with_autoproxy.
	* help/ja/ja.po: Updated Japanese translation.
	* help/C/gphotoframe.xml, */it.po: Updated help documentation and
	  Italian translation.  Thanks Cristian Marchi!

2011-04-09  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr.py: Added support for TumblrAuthenticate,
	  TumblrReblog, TumblrDelete and TumblrTrash.

2011-04-08  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* po/it.po: Updated Italian translation.  Thanks Cristian Marchi!

2011-04-07  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* plugins/tumblr.py: Checks user own posts.
	* preferences/__init__.py: Saves the geometry of preferences window.
	* actor/base.py (IconTexture): Fixed actor reactives.

2011-04-06  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/share.py: Added a confirmation dialog.

2011-04-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* actor/share.py: Added support for 'Share'.

2011-03-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.3-b2 release.

2011-03-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/*: Improved implementation for Album API.

2011-03-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* facebook/api.py: Added FacebookHomeAlbumAPI for a option
	  'Include other photos in the same album'.

2011-03-19  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* frame.py (PhotoFrame): Opens a photo with 1st mouse button
	  double clicking (issue #91).  Added new gconf key
	  'window_keep_below' (issue #90).
	
2011-03-16  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 1.3-b1 release.
	* facebook/authdialog.py: Added a 'Loading...' label on the 
	  webkit UI.

2011-03-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* defaultsource.py: Set default photo sources at the first launch
	  time.
	* dbus/networkstatecustom.py: Added new gconf key 'use_conn'.