@@ -1,3 +1,7 @@
+2011-04-11  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
+
+	* liststore.py: Added sorting photo sources.
+
 2011-04-10  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>
 
 	* plugins/*: Doesn't share private photo.
